# i3blocks-widgets-rs

./: .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs
