[package]
name = "i3blocks-widgets-rs"
version = "2020.4.13"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using clap 3's derive struct. Move to stable when available
clap = { git = "https://github.com/clap-rs/clap/" }
regex = "1"

[profile.release]
lto = true
opt-level = 3

[lib]
name = "quickshell"
path = "src/lib.rs"
